# beartools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.config/: beartools.example.yaml
.sisyphus/: boulder.json
.sisyphus/plans/: feature-doctor-command-logging-config.md  feature-dynaconf-multicmd-concurrent-checks.md  prompt-template-system.md
check/: questions.yaml
check/prompts/: bill-transaction-analysis-eval.yaml
config/: beartools.secrets.yaml.sample  beartools.yaml  beartools.yaml.sample  bill_status_mapping.yaml
docs/: codemap.md  dependency-injector-detailed.md  dependency-injector-on-demand.md  factory-with-exitstack-detailed.md  python-resource-lifecycle-report.md
docs/checklists/: audit.md  review.md
docs/plans/: 2026-05-09-codex-novel-plan.md  2026-05-09-model-check-tdd-plan.md  2026-05-09-superpowers-docs-compression-plan.md  2026-05-12-gmail-send-plan.md  2026-05-12-siyuan-cli-refactor-plan.md  2026-05-13-check-prompt-command-plan.md  2026-05-13-memory-system-plan.md  2026-05-13-prompt-reliability-check-plan.md  2026-05-16-llmfactory-client-refactor-plan.md  (+6 more)
prompts/: bill_part_refund_amount.md  bill_structure_identification.md  bill_structure_identification_fewshot.md  bill_transaction_analysis.md  bug_analysis.md  cli_command_memory.md  cli_daily_summary.md  code_review.md  codex_novel_scene_select.md  codex_pic_refine.md  codex_picedit_refine.md  feature_design.md
scripts/: run_cli_integrations.py
tests/: test_agent_factory.py  test_bill_agent.py  test_bill_calculate_tool.py  test_bill_command.py  test_bill_service.py  test_bill_status_mapping.py  test_clear.py  test_cli_entrypoint.py  test_cli_integration_commands.py  test_cli_memory_capture.py  test_codex_command.py  test_config.py  test_diary_command.py  test_doctor.py  test_doctor_command.py  test_doctor_google_ping_check.py  test_doctor_llm_check.py  test_doctor_opencli_check.py  test_fetch.py  test_gmail.py  test_llm_runtime.py  test_logger.py  test_markdown.py  test_memory_service.py  test_model_check.py  test_prompt.py  test_prompt_checker.py  test_prompt_command.py  test_prompt_evaluator.py  test_record.py  test_siyuan.py
(+104 files in other folders)
